name:                csv-killa
version:             0.1.0.0
synopsis:            csv killin'
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
copyright:           David Johnson (c) 2018
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable csv-killa
  main-is:             Main.hs
  build-depends:       base, bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
